hphp/hack/test/typecheck/generic_incompatible_implementation.php.exp
File "generic_incompatible_implementation.php", line 6, characters 7-9:
This object is of type Foo (Typing[4110])
File "generic_incompatible_implementation.php", line 6, characters 22-24:
It is incompatible with this object of type Bar
because some declarations are incompatible.
Read the following to see why:
File "generic_incompatible_implementation.php", line 7, characters 26-26:
This is a value of generic type T
File "generic_incompatible_implementation.php", line 11, characters 26-26:
It is incompatible with an object of type D
